data/derived/comb/progs/unify/prog7276.ml.out
Characters 20-21:
  let _ = removeZero [0;0;0;1;0;0;2];;
                      ^
Error: This expression has type int but an expression was expected of type
         int list
